--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "async": "2.0.1",
-    "bcrypt": "*",
+    "bcrypt": "^2.0.1",
     "bcrypt-nodejs": "0.0.3",
     "grunt": "1.0.1",
     "sails": "^1.0.0",
