--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,14 @@
+#circleci
+
 version: 2
 jobs:
     build:
         docker:
             # specify the version you desire here
             - image: circleci/node:7.10
+
                 working_directory: ~/SailsBlaBlaCar
+
 
             steps:
                 - checkout
