--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:6.1.0
+      - image: circleci/node:6.14-browsers
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
